istio-policies/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-service-a
  namespace: prod
spec:
  selector:
    matchLabels:
      app: service-b
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/prod/sa/service-a
